<resources>
    <string name="app_name">Travel Clock</string>
    <string name="title_activity_maps">Travel Clock</string>
    <string name="buttonMenu">menu</string>
    <string name="buttonMap">map</string>
    <string name="track">Track</string>
    <string name="setting">Setting</string>
    <string name="distance">Distance to alarm</string>
    <string name="first_card">Выберите пункт назначения</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_distance">Distance:</string>
    <string name="map_time">Time:</string>
    <string name="title_on_map">Left in the way</string>
    <string name="change_distance_to_alarm">Distance to the alarm:</string>
    <string name="valuesSeekDistance">500 m</string>
    <string name="trackingSwitch">Tracking mode</string>
    <string name="developer">Developed by yatochk</string>
    <string name="mapSettings">Map</string>
    <string name="alarmSettings">Alarm</string>
    <string name="vibrationSwitch">Vibration mode</string>
    <string name="values_alarm">Alarm volume:</string>
    <string name="values_alarm_seek">100%</string>
    <string name="confirmButton">GO</string>
    <string name="confirmText">Select a location and press go</string>
    <string name="arrivedTextView">You arrived</string>

</resources>
