<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".fragment.SettingFragment"
    android:padding="12dp">

    <RelativeLayout
        android:id="@+id/mapPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/panel_bg"
        android:layout_marginBottom="6dp"
        android:elevation="2dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/mapSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/name_bg"
            android:text="@string/mapSettings"
            android:textColor="@color/primaryTextColor"
            android:textSize="26sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/distanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/mapSettings"
            android:layout_marginTop="50dp"
            android:text="@string/change_distance_to_alarm"
            android:textColor="@color/secondaryTextColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/distanceText"
            android:text="@string/valuesSeekDistance"
            android:textColor="@color/secondaryTextColor"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/distanceSeekBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignTop="@id/distanceText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:max="1000"
            android:progress="500" />

        <TextView
            android:id="@+id/trackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/distanceSeekBar"
            android:layout_marginTop="50dp"
            android:text="@string/trackingSwitch"
            android:textColor="@color/secondaryTextColor"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/trackingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/trackText"
            android:layout_marginTop="30dp"
            android:checked="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/alarmPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:background="@drawable/panel_bg"
        android:elevation="2dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/alarmSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/name_bg"
            android:text="@string/alarmSettings"
            android:textColor="@color/primaryTextColor"
            android:textSize="26sp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/valueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/alarmSettings"
            android:layout_marginTop="50dp"
            android:text="@string/values_alarm"
            android:textColor="@color/secondaryTextColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/volumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/valueText"
            android:text="@string/values_alarm_seek"
            android:textColor="@color/secondaryTextColor"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/volumeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignTop="@id/valueText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:max="100"
            android:progress="100" />

        <TextView
            android:id="@+id/vibrationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/volumeSeekBar"
            android:layout_marginTop="50dp"
            android:text="@string/vibrationSwitch"
            android:textColor="@color/secondaryTextColor"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/vibrationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/vibrationText"
            android:layout_marginTop="30dp"
            android:checked="true" />

    </RelativeLayout>

</LinearLayout>