<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".Menu">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="76dp"
            android:layout_height="40dp"
            android:layout_marginEnd="91dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="32dp"
            android:text="@string/setting"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/distanceValue"
            android:layout_width="294dp"
            android:layout_height="42dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:max="@android:integer/config_longAnimTime"
            android:progress="@android:integer/config_shortAnimTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="114dp"
            android:layout_height="25dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="54dp"
            android:text="@string/distance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Switch
            android:id="@+id/trackSwitch"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="253dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="17dp"
            android:checked="true"
            android:text="@string/track"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/distanceValue" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>