<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.inMapFragments.OnWayFragment">

    <View
        android:id="@+id/backgroudView"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignTop="@id/titleView"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:background="?attr/colorPrimaryDark" />

    <View
        android:id="@+id/mainView"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignTop="@id/backgroudView"
        android:layout_marginTop="3dp"
        android:layout_alignParentStart="true"
        android:background="?attr/colorPrimary" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/mainView"
        android:layout_marginTop="20dp"
        android:layout_marginStart="60dp"
        android:text="@string/map_distance"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@id/distance"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="210dp"
        android:text="@string/map_time"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <View
        android:id="@+id/distanceView"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/distance"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="140dp"
        android:background="@drawable/layout_bg" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/distanceView"
        android:layout_alignEnd="@id/distanceView"
        android:layout_alignStart="@id/distanceView"
        android:layout_alignTop="@id/distanceView"
        android:layout_marginTop="3dp"
        android:text="123"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor" />

    <View
        android:id="@+id/timeView"
        android:layout_width="40dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/distance"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="260dp"
        android:background="@drawable/layout_bg" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/timeView"
        android:layout_alignEnd="@id/timeView"
        android:layout_alignStart="@id/timeView"
        android:layout_alignTop="@id/timeView"
        android:layout_marginTop="3dp"
        android:text="123"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor" />

    <View
        android:id="@+id/titleView"
        android:layout_width="196dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/layout_bg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/titleView"
        android:layout_alignStart="@id/titleView"
        android:layout_alignEnd="@id/titleView"
        android:layout_alignBottom="@id/titleView"
        android:layout_marginTop="4dp"
        android:text="@string/title_on_map"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textSize="16sp" />

</RelativeLayout>